# paratran

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  run.sh  server.py
.agents/skills/paratran-transcription/: SKILL.md
.github/workflows/: ci.yml  release.yml
paratran/: __init__.py  cli.py  contracts.py  mcp_server.py  serializers.py  server.py  transcribe.py
skills/paratran/: SKILL.md
tests/: test_cli.py  test_contracts.py  test_mcp.py  test_serializers.py  test_server.py  test_transcribe.py
