[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paratran"
version = "0.5.0"
description = "REST API for audio transcription using parakeet-mlx"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Brian Sunter" }]
keywords = ["transcription", "asr", "speech-to-text", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "parakeet-mlx",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/briansunter/paratran"
Repository = "https://github.com/briansunter/paratran"

[tool.setuptools.packages.find]
include = ["paratran*"]

[project.scripts]
paratran = "paratran.cli:main"
paratran-mcp = "paratran.mcp_server:main"
