[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paratran"
version = "0.6.0"
description = "CLI, REST interface, and MCP server for audio transcription using parakeet-mlx"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Brian Sunter" }]
keywords = ["transcription", "asr", "speech-to-text", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "parakeet-mlx>=0.5.0,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9,<1",
    "mcp>=1.0,<2",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "httpx2>=2.7,<3",
    "pytest>=8,<9",
    "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[project.urls]
Homepage = "https://github.com/briansunter/paratran"
Repository = "https://github.com/briansunter/paratran"

[tool.setuptools.packages.find]
include = ["paratran*"]

[project.scripts]
paratran = "paratran.cli:main"
paratran-mcp = "paratran.mcp_server:main"
